--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^4.0.2",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.2.3"
   }
 }
